--- a/.github/workflows/container-scanner.yml
+++ b/.github/workflows/container-scanner.yml
@@ -26,7 +26,7 @@ jobs:
           exit-code: '1'
           ignore-unfixed: true
           vuln-type: 'os,library'
-          severity: 'CRITICAL,HIGH'
+          severity: 'CRITICAL,HIGH,MEDIUM,LOW'
 
       - name: Upload Trivy scan results to GitHub Security tab
         if: ${{ always() }}
